Actualización de la configuración de docker-compose.yml con nuevas claves API y credenciales de base de datos. Modificación de ferremax.sql para crear y estructurar tablas de 'usuario', 'productos', 'Boletas', y 'suscriptions', además de insertar datos iniciales y establecer relaciones entre las tablas. Se agrega soporte para la columna 'Moneda' en productos y se ajustan los estados de las boletas.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,9 +67,8 @@ services:
       - "8080:80"
     environment:
       PMA_HOST: mysql
-      PMA_USER: root
-      PMA_PASSWORD: root123
-      MYSQL_ROOT_PASSWORD: root123
+      PMA_USER: ferremax_user
+      PMA_PASSWORD: ferremax_pass
     depends_on:
       mysql:
         condition: service_healthy
